--- a/index.html
+++ b/index.html
@@ -59,16 +59,8 @@
             id="myPics"
             width="560"
             height="360"
-            style="border: 1px solid black;"
+            style="border: 1px solid black"
           ></canvas>
-          <div class="sendStream">
-            <input
-              type="button"
-              id="sendStream"
-              value="sendStream"
-              onclick="sendStream()"
-            />
-          </div>
         </div>
       </div>
     </div>
